syntax = "proto3";
	package hydra;
		
	message ProtoCompleteTransaction {
        message VinType {
            string Coinbase = 1;
            bytes Txid = 2;
            uint32 Vout = 3;
            bytes ScriptSigHex = 4;
            uint32 Sequence = 5;
            repeated string Addresses = 6;
        }
        message VoutType {
            bytes ValueSat = 1;
            uint32 N = 2;
            bytes ScriptPubKeyHex = 3;
            repeated string Addresses = 4;
        }
        message ReceiptType {
            message LogType {
                bytes Address = 1;
                bytes Data = 2;
                repeated bytes Topics = 3;
            }
            bytes GasUsed = 1;
            bytes GasLimit = 2;
            bytes GasPrice = 3;
            bytes Status = 4;
            repeated LogType Log = 5;
        }
        bytes Txid = 1;
        bytes Hex = 2;
        uint64 Blocktime = 3;
        uint32 Locktime = 4;
        uint32 Height = 5;
        repeated VinType Vin = 6;
        repeated VoutType Vout = 7;
        int32 Version = 8;
        ReceiptType Receipt = 9;
    }